# chat-grpc

./: Cargo.toml  README.md  build.rs  flake.nix
proto/: streaming.proto
src/: client.rs  server.rs
