[package]
name = "chat-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
crossterm = "0.27.0"
dashmap = "5.5.3"
prost = "0.12.6"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tonic = { version = "0.11.0", features = ["transport"] }
tui = { package = "ratatui", version = "0.26.3" }

[build-dependencies]
tonic-build = "0.11.0"
